# UNO-Qt5

./: CMakeLists.txt  README.md  UNORes.qrc
cmake-modules/: Doxyfile.in  build_doxygen.cmake
front-end/include/: ai.h  card.h  color.h  content.h  gamewindow.h  info.h  mainwindow.h  newButton.h  newbutton.h  player.h  settingwindow.h  sound.h  uno.h
front-end/src/: gamewindow.cpp  main.cpp  mainwindow.cpp  settingwindow.cpp  uno.cpp
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
